<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemApp</string>
    <string name="back">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MemApp</string>
    <string name="intro_head">Welcome to Memory App!</string>
    <string name="intro">The goal of Memory App is to</string>
    <string name="button1_name">Start</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="timer_initial">Timer</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="confirm_button">Confirm</string>
    <string name="init_choice_text">Pick the shapes you saw!</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="game_over">Game Over</string>
    <string name="end_text">End Text</string>
    <string name="restart">Play Again</string>
    <string name="button2_name">How To Play</string>
    <string name="title_activity_instruction">InstructionActivity</string>
    <string name="instr_title">How To Play</string>
    <string name="instructions">MemApp is a simple game to test your memory. You will be shown a sequence of shapes, starting with only one shape. You will then see a screen with many random shapes, amongst which the shape(s) you saw will be mixed in. Pick them out and press the &quot;Confirm&quot; button to continue. The process will repeat with one more shape, and so on until you fail to identify the shapes correctly. See how many shapes you can remember.</string>

</resources>